--- a/RPG/Assembly-CSharp.csproj
+++ b/RPG/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\PlayerMovementBehaviour.cs" />
+     <Compile Include="Assets\Scripts\PlayerRemoteController.cs" />
+     <Compile Include="Assets\Scripts\SquareBehaviour.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
